--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@turf/turf": "^7.2.0",
+    "axios": "^1.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
